--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,16 @@
 version: '3'
 services:
-        web:
-                image: flask_finalcptperiod4_v1
-                build: .
-                ports:
-                        - "8753:8753"
-                volumes:
-                        - ./volumes:/volumes
-                        - ./instance:/instance
-                restart: unless-stopped
+      web:
+              image: flask_finalcptperiod4_v1
+              build: .
+              ports:
+                      - "8753:8753"
+              volumes:
+                      - persistent_volume:/app/volumes
+volumes:
+  persistent_volume:
+    driver: local
+    driver_opts:
+      o: bind
+      type: none
+      device: /home/ubuntu/finalcptperiod4/volumes
